[package]
name = "cooklang"
version = "0.13.3"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]
description = "Cooklang parser with opt-in extensions"
license = "MIT"
keywords = ["cooklang", "cooking", "recipes"]
categories = ["parser-implementations"]
repository = "https://github.com/cooklang/cooklang-rs"
readme = "README.md"

[dependencies]
bitflags = { version = "2", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1"
url = { version = "2", features = ["serde"] }
pest = { version = "2", optional = true }
pest_derive = { version = "2", optional = true }
emojis = "0.6"
toml = { version = "0.8", optional = true }
once_cell = "1"
enum-map = { version = "2", features = ["serde"] }
tracing = "0.1"
codesnake = "0.2.1"
unicode-width = "0.1.13"
either = "1.8"
finl_unicode = { version = "1.2", features = ["categories"], default-features = false }
smallvec = { version = "1" }
unicase = "2.7.0"
yansi = "1.0.1"
serde_yaml = "0.9.34"

[dev-dependencies]
serde_json = "1"
criterion = "0.5"
test-case = "3.2.1"
indoc = "2.0.3"

[features]
default = ["bundled_units", "aisle"]
bundled_units = ["dep:toml"]
aisle = ["dep:pest", "dep:pest_derive"]

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "convert"
harness = false

[workspace]
members = [".", "playground", "bindings", "fuzz"]

[profile.release]
strip = true
