[package]
name = "cooklang"
version = "0.14.0"
edition = "2021"
authors = ["Zheoni <zheoni@outlook.es>"]
description = "Cooklang parser with opt-in extensions"
license = "MIT"
keywords = ["cooklang", "cooking", "recipes"]
categories = ["parser-implementations"]
repository = "https://github.com/cooklang/cooklang-rs"
readme = "README.md"

[dependencies]
bitflags = { version = "2", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "2"
pest = { version = "2", optional = true }
pest_derive = { version = "2", optional = true }
once_cell = "1"
enum-map = { version = "2", features = ["serde"] }
tracing = "0.1"
codesnake = "0.2.1"
unicode-width = "0.2"
either = "1.8"
finl_unicode = { version = "1.2", features = ["categories"], default-features = false }
smallvec = { version = "1" }
unicase = "2.7.0"
yansi = "1.0.1"
serde_yaml = "0.9.34"

[dev-dependencies]
toml = "0.8"
serde_json = "1"
criterion = "0.5"
test-case = "3.2.1"
indoc = "2.0.3"

[build-dependencies]
toml = { version = "0.8", optional = true }
prettyplease = { version = "0.2", optional = true }
quote = { version = "1", optional = true }
syn = { version = "2", optional = true }

[features]
default = ["aisle", "bundled_units"]
bundled_units = ["toml", "prettyplease", "quote", "syn"]
aisle = ["dep:pest", "dep:pest_derive"]

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "convert"
harness = false

[workspace]
members = [".", "playground", "bindings", "fuzz"]
