[package]
name = "cooklang-bindings"
version = "0.17.0"
edition = "2021"
authors = ["dubadub <dubovskoy.a@gmail.com>"]
description = "Cooklang Uniffi bindings"
license = "MIT"
keywords = ["cooklang", "unuffi"]
repository = "https://github.com/cooklang/cooklang-rs"
readme = "README.md"

[dependencies]
anyhow = "1.0"
cooklang = { path = "..", default-features = false, features = ["aisle", "ts"] }
uniffi = "0.28.1"
clap_derive = { version = "4.0.0-rc.1" }

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
# workaround: https://mozilla.github.io/uniffi-rs/tutorial/foreign_language_bindings.html#creating-the-bindgen-binary
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
required-features = ["uniffi/cli"]
