[package]
name = "cooklang-bindings"
version = "0.17.10"
edition = "2021"
authors = ["dubadub <dubovskoy.a@gmail.com>"]
description = "Cooklang Uniffi bindings"
license = "MIT"
keywords = ["cooklang", "unuffi"]
repository = "https://github.com/cooklang/cooklang-rs"
readme = "README.md"

[dependencies]
anyhow = "1.0"
cooklang = { path = "..", default-features = false, features = ["aisle"] }
uniffi = "0.28.1"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
# workaround: https://mozilla.github.io/uniffi-rs/tutorial/foreign_language_bindings.html#creating-the-bindgen-binary
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
required-features = ["uniffi/cli"]
