[package]
name = "cooklang-bindings"
version = "0.18.6"
edition = "2021"
authors = ["dubadub <dubovskoy.a@gmail.com>"]
description = "Cooklang Uniffi bindings"
license = "MIT"
keywords = ["cooklang", "uniffi"]
repository = "https://github.com/cooklang/cooklang-rs"
readme = "README.md"

[dependencies]
anyhow = "1.0"
cooklang = { path = "..", default-features = false, features = ["aisle", "shopping_list"] }
thiserror = "2"
uniffi = "0.28.1"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
# workaround: https://mozilla.github.io/uniffi-rs/tutorial/foreign_language_bindings.html#creating-the-bindgen-binary
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
required-features = ["uniffi/cli"]
