[package]
name = "cooklang-playground"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cooklang = { path = ".." }
wasm-bindgen = "0.2.87"
ansi-to-html = "0.1.3"
serde_json = "1"
maud = "0.25.0"

[build-dependencies]
git2 = { version = "0.18", default-features = false }
