[package]
name = "cooklang-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cooklang = { path = "..", features = ["default", "ts"] }
wasm-bindgen = "0.2.87"
ansi-to-html = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
maud = "0.26.0"
tsify = "0.5"

[build-dependencies]
git2 = { version = "0.20", default-features = false }
